--- a/src/sass/blocks/questions.scss
+++ b/src/sass/blocks/questions.scss
@@ -68,7 +68,7 @@
           content: "";
           width: size(215px);
           height: size(163px);
-          background-image: url(./../../img/label-mob-2.svg);
+          background-image: url(./../img/label-mob-2.svg);
           background-position: left;
           background-repeat: no-repeat;
           top: size(-40px);
@@ -85,7 +85,7 @@
           content: "";
           width: size(41px);
           height: size(212px);
-          background-image: url(./../../img/label-mob-3.svg);
+          background-image: url(./../img/label-mob-3.svg);
           background-position: left;
           background-repeat: no-repeat;
           top: size(-40px);
@@ -108,7 +108,7 @@
           content: "";
           width: size(46px);
           height: size(285px);
-          background-image: url(./../../img/label-mob-1.svg);
+          background-image: url(./../img/label-mob-1.svg);
           background-position: right;
           background-repeat: no-repeat;
           top: size(123px);
