--- a/src/sass/blocks/reduce.scss
+++ b/src/sass/blocks/reduce.scss
@@ -25,7 +25,7 @@
     height: size(992px);
     width: size(162px);
     max-width: 170px;
-    background-image: url("./../../img/labels.svg");
+    background-image: url("./../img/labels.svg");
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
@@ -46,7 +46,7 @@
     left: 0;
     height: size(251px);
     width: size(192px);
-    background-image: url("./../../img/labels-mob.svg");
+    background-image: url("./../img/labels-mob.svg");
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
