--- a/src/sass/blocks/partners.scss
+++ b/src/sass/blocks/partners.scss
@@ -233,7 +233,7 @@
     }
 
     &:checked + label::before {
-      background-image: url(./../../img/tick.svg);
+      background-image: url(./../img/tick.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 70%;
