--- a/src/pug/partials/partners.pug
+++ b/src/pug/partials/partners.pug
@@ -43,5 +43,5 @@
         input.partners__checkbox(type="checkbox" id="agree")
         label(for="agree") Я даю согласие на обработку персональных данных
         button.button.button--black
-          | Стать парнером
+          | Стать&nbsp;парнером
           +svg("arrow", "31", "12")
