--- a/src/sass/blocks/partners.scss
+++ b/src/sass/blocks/partners.scss
@@ -217,8 +217,8 @@
       position: relative;
       margin-bottom: 58px;
       font-weight: normal;
-      font-size: 14px !important;
-      line-height: 15px !important;
+      font-size: 14px ;
+      line-height: 15px ;
       top: 2px !important;
 
       @include mobile {
