--- a/src/sass/blocks/new-approach.scss
+++ b/src/sass/blocks/new-approach.scss
@@ -89,13 +89,10 @@
       margin-left: 61px;
     }
 
-    @include tablet {
-      margin-left: 0;
-    }
-
     @include mobile {
       width: size(300px);
       height: auto;
+      margin-left: 0;
     }
   }
 
@@ -111,7 +108,7 @@
       font-weight: normal;
       font-size: size(16px);
       line-height: size(24px);
-      padding-top: size(10px);
+      padding-top: size(20px);
 
       @include mobile {
         font-size: size(16px);
@@ -121,6 +118,7 @@
     }
 
     svg {
+      position: relative;
       @include mobile {
         display: none;
       }
@@ -139,14 +137,14 @@
       svg {
         width: 100%;
         height: 100%;
-        margin-bottom: size(24px);
+        margin-bottom: size(3px);
       }
     }
 
     &--apple {
       width: size(139px);
-      top: size(63px);
-      left: size(152px);
+      top: size(32px);
+      left: size(150px);
 
 
       @include mobile {
@@ -168,6 +166,8 @@
       svg {
         width: size(126px);
         height: size(141px);
+        position: relative;
+        left: size(10px);
 
       }
     }
@@ -190,11 +190,12 @@
     }
 
     &--sun {
-      width: size(132px);
-      top: size(526px);
+      width: size(175px);
+      top: size(462px);
       left: size(193px);
 
       @include mobile {
+        width: size(133px);
         top: size(846px);
         left: size(4px);
       }
@@ -225,7 +226,7 @@
       svg {
         width: size(111px);
         height: size(119px);
-
+        left: size(-7px);
 
       }
     }
@@ -233,12 +234,12 @@
     &--present {
       width: size(180px);
       top: size(486px);
-      right: size(259px);
+      right: size(234px);
 
       @include mobile {
         bottom: size(8px);
         top: unset;
-        padding-left: size(100px);
+        padding-left: size(107px);
         width: size(280px);
         right: unset;
         left:size(8px);
@@ -248,6 +249,7 @@
         width: size(160px);
         height: size(161px);
         margin-left: auto;
+        left: 7px;
       }
 
       span {
@@ -264,7 +266,7 @@
     &--leafs {
       width: size(124px);
       bottom: 0;
-      right: size(40px);
+      right: size(34px);
 
       @include mobile {
         top: unset;
@@ -287,6 +289,7 @@
         font-weight: normal;
         font-size: 16px;
         line-height: 24px;
+        padding-top: 20px;
       }
 
       &--big-dino {
@@ -298,18 +301,21 @@
         svg {
           width: 100%;
           height: 100%;
-          margin-bottom: 24px;
+          margin-bottom: 3px;
         }
       }
 
       &--apple {
         width: 139px;
-        top: 63px;
-        left: 152px;
+        top: 32px;
+        left: 150px;
+
 
         svg {
           width: 126px;
           height: 141px;
+          position: relative;
+          left: 10px;
         }
       }
 
@@ -325,8 +331,8 @@
       }
 
       &--sun {
-        width: 132px;
-        top: 526px;
+        width: 175px;
+        top: 462px;
         left: 193px;
 
         svg {
@@ -343,17 +349,19 @@
         svg {
           width: 111px;
           height: 119px;
+          left: -7px;
         }
       }
 
       &--present {
         width: 180px;
         top: 486px;
-        right: 259px;
+        right: 234px;
 
         svg {
           width: 160px;
           height: 161px;
+          left: size(7px);
 
         }
         span {
@@ -364,7 +372,7 @@
       &--leafs {
         width: 124px;
         bottom: 0;
-        right: 40px;
+        right: 34px;
 
         svg {
           width: 111px;
