--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -31,7 +31,7 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 18px;
-    padding: 27px 30px 27px 30px;
+    padding: 31px 30px 27px 30px;
     background-color: $color-dark-green;
     letter-spacing: 0.08em;
     color: $color-light-grey;
@@ -39,6 +39,7 @@
     margin-right: auto;
     height: 72px;
     display: flex;
+    align-items: center;
 
     svg {
       margin-left: 27px;
@@ -47,7 +48,7 @@
     @include mobile {
       font-size: size(16px);
       line-height: size(18px);
-      padding: size(27px) size(27px) size(27px) size(27px);
+      padding: size(31px) size(27px) size(27px) size(27px);
       width: size(260px);
       height: size(72px);
       svg {
