--- a/src/pug/partials/app.pug
+++ b/src/pug/partials/app.pug
@@ -7,5 +7,5 @@ block app
         | Не отказывайтесь от любимых товаров — покупайте их дешевле!
       .app__text
         | Скачайте приложение «Price Hacker» и переходите к рациональному шопингу уже сегодня! 
-      .app__btn.button.button--coral Cкачать
+      button.app__btn.button.button--coral Cкачать
       +svg("confetti", "500", "316")
