--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -15,6 +15,11 @@
     background-color: $color-coral;
     padding: 22px 11px;
     width: 250px;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: $color-coral-hover;
+    }
 
     @include mobile {
       width: size(250px);
@@ -23,7 +28,6 @@
       font-size: size(17px);
       line-height: size(22px);
       padding: size(22px) size(11px) size(19px);
-
     }
   }
 
