--- a/src/sass/general/variables.scss
+++ b/src/sass/general/variables.scss
@@ -17,6 +17,7 @@ $color-green: #00AF57;
 $color-dark-grey: #50545A;
 $color-grey: #ADB6BB;
 $color-coral: #F06C4E;
+$color-coral-hover: #F29479;
 $color-light-grey:#F4F8FB;
 $color-bg-grey:#F2F2F2;;
 $color-black-footer: #062431;
