--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -3,6 +3,7 @@
   height: 64px;
   box-sizing: border-box;
   border-radius: 4px;
+  transition: background-color 0.2s;
 
 
   &--coral {
@@ -15,7 +16,7 @@
     background-color: $color-coral;
     padding: 22px 11px;
     width: 250px;
-    transition: background-color 0.2s;
+
 
     &:hover {
       background-color: $color-coral-hover;
@@ -35,7 +36,7 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 18px;
-    padding: 31px 30px 27px 30px;
+    padding: 30px 30px 27px 30px;
     background-color: $color-dark-green;
     letter-spacing: 0.08em;
     color: $color-light-grey;
@@ -44,6 +45,11 @@
     height: 72px;
     display: flex;
     align-items: center;
+
+
+    &:hover {
+      background-color: #637854;
+    }
 
     svg {
       margin-left: 27px;
