--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -65,7 +65,7 @@ html( lang="ru" )
               +svg("facebook", "15", "28")
       .footer__bottom
         .footer__agreement
-          a(href="") Пользовательское соглашение
+          a(href="/agreement.html") Пользовательское соглашение
         .footer__copyright
           p © PRICEHACKER 2020
     block scripts
