--- a/src/sass/blocks/agreement.scss
+++ b/src/sass/blocks/agreement.scss
@@ -2,11 +2,13 @@
   color: #000000;
   margin: 80px 0;
   width: 1006px;
+  padding: 0 52px;
 
   @include laptop {
     width: 100%;
     padding-right: 30px;
     box-sizing: border-box;
+    padding: 0;
   }
 
   @include mobile {
