--- a/src/agreement.pug
+++ b/src/agreement.pug
@@ -2,6 +2,7 @@ extends pug/layout.pug
 
 block variables
   - let title = 'Правила сервиса Pricehacker';
+  - let isAgreement = true;
 
 block content
   .container.container__agreement
